# physical-flashcard-backend

./: CLAUDE.md  README.md  build.sh  justfile  pyproject.toml  render.yaml
config/: settings.py  urls.py
flashcards/: admin.py
flashcards/migrations/: 0002_flashcardcollection_background_color_and_more.py  0003_flashcard_header_right.py  0004_flashcardcollection_font_family_and_more.py
flashcards/models/: flashcard.py
flashcards/serializers/: flashcard.py
